# py-aiger-discrete

./: .drone.yml  README.md  pyproject.toml
aiger_discrete/: discrete.py  mdd.py
docs/: discrete.html  index.html
tests/: test_discrete.py  test_mdd.py
